// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrTextField Component should render the disabled mode 1`] = `
<WithStyles(FormControl)
  disabled={true}
  fullWidth={true}
  margin="normal"
  required={false}
  variant="outlined"
>
  <WithStyles(OutlinedInput)
    fullWidth={true}
    labelWidth={0}
    multiline={true}
    rows="6"
    rowsMax="10"
  />
</WithStyles(FormControl)>
`;

exports[`PrTextField Component should render the enabled mode 1`] = `
<WithStyles(FormControl)
  fullWidth={true}
  margin="normal"
  required={false}
  variant="outlined"
>
  <WithStyles(OutlinedInput)
    fullWidth={true}
    labelWidth={0}
    multiline={true}
    rows="6"
    rowsMax="10"
    value="This is writeable text!"
  />
</WithStyles(FormControl)>
`;

exports[`PrTextField Component should render the error mode 1`] = `
<WithStyles(FormControl)
  error={true}
  fullWidth={true}
  margin="normal"
  required={false}
  variant="outlined"
>
  <WithStyles(OutlinedInput)
    fullWidth={true}
    labelWidth={0}
    multiline={true}
    rows="6"
    rowsMax="10"
  />
  <WithStyles(FormHelperText)>
    Error: Bitte fülle das Pflichtfeld aus, bevor du das PR freigibst.
  </WithStyles(FormHelperText)>
</WithStyles(FormControl)>
`;

exports[`PrTextField Component should render the readonly mode 1`] = `
<WithStyles(FormControl)
  fullWidth={true}
  margin="normal"
  required={false}
  variant="outlined"
>
  <WithStyles(OutlinedInput)
    fullWidth={true}
    labelWidth={0}
    multiline={true}
    readOnly={true}
    rows="6"
    rowsMax="10"
    value="This is read-only text!"
  />
</WithStyles(FormControl)>
`;
